force-app/main/default/objects/Location/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 10/11/2020
User Story: Gd-964
Purpose :- After Sales service available of Customer.</description>
    <formula>TEXT(Department__r.Country__c)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>