force-app/main/default/objects/Location/fields/Shelf__c.field-meta.xml
<CustomField>
    <fullName>Shelf__c</fullName>
    <label>Shelf</label>
    <length>15</length>
    <type>Text</type>
</CustomField>