force-app/main/default/objects/Location/fields/Store_Department__c.field-meta.xml
<CustomField>
    <fullName>Store_Department__c</fullName>
    <label>Store Department</label>
    <length>15</length>
    <type>Text</type>
</CustomField>